[project]
name = "internetwebsearchermcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.4",
    "fastmcp>=2.11.3",
    "gradio>=5.45.0",
    "langchain-openai>=0.3.33",
    "mcp-use>=1.3.10",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
